shop/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-shop-service
spec:
  selector:
    app: hello-shop-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
  type: NodePort
