shop/deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-shop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp($|/)(.*)
            backend:
              serviceName: hello-shop-service
              servicePort: 8080
